--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,44 @@
 name: ci
+
 on:
   push:
     branches:
       - master
       - main
+
 permissions:
   contents: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
+
       - name: Configure Git Credentials
         run: |
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
-      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
+
+      - name: Cache pip and MkDocs cache
+        run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
+
       - uses: actions/cache@v4
         with:
           key: mkdocs-${{ env.cache_id }}
-          path: .cache
+          path:
+            - .cache
+            - ~/.cache/pip
+
       - name: Install MkDocs & Plugins
-        run: pip install mkdocs mkdocs-simple-blog
+        run: |
+          pip install mkdocs
+          pip install mkdocs-material
+
       - name: Build & Deploy
         run: mkdocs gh-deploy --force
