--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,17 +9,12 @@ on:
 permissions:
   contents: write
 
-# define cache_id so the key isn't empty
-env:
-  cache_id: ${{ runner.os }}-pip-mkdocs-${{ hashFiles('requirements.txt') }}
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Configure Git credentials
         run: |
@@ -34,7 +29,8 @@ jobs:
       - name: Cache pip and MkDocs cache
         uses: actions/cache@v4
         with:
-          key: mkdocs-${{ env.cache_id }}
+          # runner.os and hashFiles() are valid here
+          key: mkdocs-${{ runner.os }}-pip-mkdocs-${{ hashFiles('requirements.txt') }}
           path: |
             .cache
             ~/.cache/pip
